# attend

./: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  README.md  cmake_install.cmake  image_display.cpp
edges/: datasetBoxes.m  datasetBoxes.m~  edgeBoxesDemo.m
img/4Progress_dataset/01bottle/bboxes/: 0001-001.csv  0001-002.csv  0001-003.csv  0001-004.csv  0001-005.csv  0001-006.csv  0001-007.csv  0001-008.csv  0001-009.csv  0001-010.csv  0001-011.csv  0001-012.csv  0001-013.csv  0001-014.csv  0001-015.csv  0001-016.csv  0001-017.csv  0001-018.csv  0001-019.csv  0001-020.csv  0002-001.csv  0002-002.csv  0002-003.csv  0002-004.csv  0002-005.csv  0002-006.csv  0002-007.csv  0002-008.csv  0002-009.csv  0002-010.csv  0002-011.csv  0002-012.csv  0002-013.csv  0002-014.csv  0002-015.csv  0002-016.csv  0002-017.csv  0002-018.csv  0002-019.csv  0002-020.csv  (+6 more)
img/4Progress_dataset/02spring/bboxes/: 0001-001.csv  0001-002.csv  0001-003.csv  0001-004.csv  0001-005.csv  0001-006.csv  0001-007.csv  0001-008.csv  0001-009.csv  0001-010.csv  0001-011.csv  0001-012.csv  0001-013.csv  0001-014.csv  0001-015.csv  0001-016.csv  0001-017.csv  0001-018.csv  0001-019.csv  (+58 more)
misc/: itti.h  point_cloud_trans_receiver.cpp  unused-code-sections.cpp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  attend.cpp  cmake_install.cmake  edgeBox_interface.cpp  edgeBox_interface.h  itti  itti_model.cpp  normalize.cpp  normalize.h  objectProposal.cpp  objectProposal.h  saliency.cpp  saliency.h  unused code sections  util.h
src/edges/: edgeBoxesDemo.m
test/: CMakeLists.txt  a.out  test.cpp
(+179 files in other folders)
